<resources>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="litter_mapper">Litter Mapper</string>
    <string name="Hybrid">Hybrid</string>
    <string name="Satellite">Satellite</string>
    <string name="Terrain">Terrain</string>
    <string name="Register">Register</string>
    <string name="Phone_Number">Phone_Number</string>
    <string name="Name">Name</string>
    <string name="empty">empty</string>
    <string name="Map">Map</string>
    <string name="Explore">Explore \n the app</string>
    <string name="Forgot_Password">Forgot_Password</string>


    <string name="Current" >Current</string>
    <string name="TODO1">TODO</string>
    <string name="TODO2">TODO</string>
    <string name="TODO3">TODO</string>
    <string name="TODO4">TODO</string>
    <string name="TODO5">TODO</string>
    <string name="Record">Record Points</string>
    <string name="Delete">Delete Polygon</string>
    <string name="Draw">View Polygon</string>
    <string name="End">Submit Data</string>

    <string name="explanation">
        This application is meant to map areas that have garbage that are uncollected
        in Nairobi county, it may not represent the true picture of the situation,
        as the data is not validated at all. However, it is hoped that the necessary
        authority takes charge and verifies the locations in addition to collecting garbage.
    </string>
</resources>