<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/Register"
        android:fontFamily="serif-monospace"
        android:textColor="#689F38"
        android:textStyle="bold"
        android:textSize="40sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/explanation"
        android:fontFamily="serif-monospace"
        android:layout_marginTop="60dp"
        android:textStyle="bold"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="20sp" />

    <RelativeLayout
        android:layout_width="360dp"
        android:layout_height="200dp"
        android:layout_centerInParent="true"
        android:layout_marginStart="?actionBarSize"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="?actionBarSize"
        android:alpha="0.5">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/password"
            android:layout_width="240dp"
            android:layout_height="40dp"
            android:layout_below="@id/username"
            android:layout_centerInParent="true"
            android:layout_margin="10dp"
            android:hint="@string/Phone_Number"
            android:inputType="textPassword"
            android:textColorHint="@color/black" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/username"
            android:layout_width="240dp"
            android:layout_height="40dp"
            android:layout_marginTop="20dp"
            android:layout_centerInParent="true"
            android:hint="@string/Name"
            android:inputType="textPersonName"
            android:textColorHint="@color/black" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal"
        android:layout_marginTop="10dp"
        android:padding="5dp">


        <Button
            android:id="@+id/record"
            android:layout_width="10dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_weight="1"
            android:text="@string/Map" />

    </LinearLayout>


</RelativeLayout>
